fix simple icons alignment

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -76,3 +76,7 @@ body {
   /* transition: 0.5s; */
   --_p: 100%;
 }
+
+.__simple-icons-svg {
+  display: block !important;
+}
